--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,6 @@ dependencies {
     androidTestImplementation libs.espresso.core
     implementation libs.datastore.preferences
     implementation libs.datastore.preferences.rxjava3
+    implementation libs.okhttp
+    implementation libs.moshi
 }
