--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication1">
         <activity
-            android:name=".MainActivity5"
+            android:name=".MainActivity7"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,17 +24,23 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".MainActivity6"
+            android:exported="false"/>
+        <activity
+            android:name=".MainActivity5"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity4"
             android:exported="false" />
         <activity
             android:name=".MainActivity3"
-            android:exported="true"/>
+            android:exported="false" />
         <activity
             android:name=".MainActivity2"
-            android:exported="true"/>
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true" />
+            android:exported="false" />
     </application>
 
 </manifest>
